start up commands for spark docker env

--- a/spark_env_data_engineering_docker/data-engineering-spark/itversity-material/03-hadoop-and-spark/01_getting_started_with_hadoop_and_spark/07_managing_spark_metastore_databases.ipynb
+++ b/spark_env_data_engineering_docker/data-engineering-spark/itversity-material/03-hadoop-and-spark/01_getting_started_with_hadoop_and_spark/07_managing_spark_metastore_databases.ipynb
@@ -27,9 +27,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "username = itversity\n",
+       "spark = org.apache.spark.sql.SparkSession@7fab499f\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data",
+     "source": "user"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "org.apache.spark.sql.SparkSession@7fab499f"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import org.apache.spark.sql.SparkSession\n",
     "\n",
@@ -46,9 +68,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Waiting for a Spark session to start..."
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data",
+     "source": "user"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "++\n",
+       "||\n",
+       "++\n",
+       "++\n",
+       "\n"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%%sql\n",
     "\n",
@@ -57,9 +104,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "++\n",
+       "||\n",
+       "++\n",
+       "++\n",
+       "\n"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%%sql\n",
     "\n",
@@ -68,9 +130,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Magic sql failed to execute with error: \n",
+       "org.apache.hadoop.hive.metastore.api.AlreadyExistsException: Database itversity_demo already exists;"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%%sql\n",
     "\n",
@@ -79,9 +153,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "++\n",
+       "||\n",
+       "++\n",
+       "++\n",
+       "\n"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%%sql\n",
     "\n",
@@ -90,9 +179,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "+----------------+\n",
+       "|    databaseName|\n",
+       "+----------------+\n",
+       "|         default|\n",
+       "|  itversity_demo|\n",
+       "|itversity_retail|\n",
+       "|       retail_db|\n",
+       "+----------------+\n",
+       "\n"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%%sql\n",
     "\n",
@@ -101,9 +209,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "+------------------+\n",
+       "|current_database()|\n",
+       "+------------------+\n",
+       "|           default|\n",
+       "+------------------+\n",
+       "\n"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%%sql\n",
     "\n",
@@ -112,9 +236,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "++\n",
+       "||\n",
+       "++\n",
+       "++\n",
+       "\n"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%%sql\n",
     "\n",
@@ -123,9 +262,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "+------------------+\n",
+       "|current_database()|\n",
+       "+------------------+\n",
+       "|    itversity_demo|\n",
+       "+------------------+\n",
+       "\n"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%%sql\n",
     "\n",
@@ -134,18 +289,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "username = itversity\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data",
+     "source": "user"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "itversity"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "val username = System.getProperty(\"user.name\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "warning: there was one feature warning; re-run with -feature for details\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data",
+     "source": "user"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import sys.process._\n",
     "s\"hdfs dfs -ls /user/${username}/warehouse/${username}_demo.db\"!"
@@ -153,9 +350,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "++\n",
+       "||\n",
+       "++\n",
+       "++\n",
+       "\n"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%%sql\n",
     "\n",
@@ -164,9 +376,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 1 items\n",
+      "drwxr-xr-x   - itversity supergroup          0 2022-11-14 12:28 /user/itversity/warehouse/itversity_demo.db/table_demo\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "warning: there was one feature warning; re-run with -feature for details\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data",
+     "source": "user"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import sys.process._\n",
     "s\"hdfs dfs -ls /user/${username}/warehouse/${username}_demo.db\"!"
@@ -174,9 +415,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "++\n",
+       "||\n",
+       "++\n",
+       "++\n",
+       "\n"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%%sql\n",
     "\n",
@@ -185,9 +441,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ls: `/user/itversity/warehouse/itversity_demo.db': No such file or directory\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "warning: there was one feature warning; re-run with -feature for details\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data",
+     "source": "user"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import sys.process._\n",
     "s\"hdfs dfs -ls /user/${username}/warehouse/${username}_demo.db\"!"
@@ -195,9 +479,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "++\n",
+       "||\n",
+       "++\n",
+       "++\n",
+       "\n"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%%sql\n",
     "\n",
@@ -206,9 +505,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 1 items\n",
+      "drwxr-xr-x   - itversity supergroup          0 2022-11-14 12:28 /user/itversity/custom/itversity_demo.db\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "warning: there was one feature warning; re-run with -feature for details\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data",
+     "source": "user"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import sys.process._\n",
     "s\"hdfs dfs -ls /user/${username}/custom\"! // Directory will be created if it does not exists"
@@ -216,9 +544,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "warning: there was one feature warning; re-run with -feature for details\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data",
+     "source": "user"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import sys.process._\n",
     "s\"hdfs dfs -ls /user/${username}/custom/${username}_demo.db\"!"
