--- a/spark_env_data_engineering_docker/data-engineering-spark/itversity-material/03-hadoop-and-spark/01_getting_started_with_hadoop_and_spark/06_understanding_warehouse_directory.ipynb
+++ b/spark_env_data_engineering_docker/data-engineering-spark/itversity-material/03-hadoop-and-spark/01_getting_started_with_hadoop_and_spark/06_understanding_warehouse_directory.ipynb
@@ -24,9 +24,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "username = itversity\n",
+       "spark = org.apache.spark.sql.SparkSession@29a40aaf\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data",
+     "source": "user"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "org.apache.spark.sql.SparkSession@29a40aaf"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import org.apache.spark.sql.SparkSession\n",
     "\n",
@@ -43,14 +65,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Waiting for a Spark session to start..."
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data",
+     "source": "user"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "+--------------------+--------------------+\n",
+       "|                 key|               value|\n",
+       "+--------------------+--------------------+\n",
+       "|spark.sql.warehou...|/user/itversity/w...|\n",
+       "+--------------------+--------------------+\n",
+       "\n"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%%sql\n",
     "\n",
     "SET spark.sql.warehouse.dir"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
