itversity html page with commands

--- a/spark_env_data_engineering_docker/data-engineering-spark/itversity-material/03-hadoop-and-spark/05_dml_and_partitioning_using_spark_sql/01_dml_and_partitioning_using_spark_sql.ipynb
+++ b/spark_env_data_engineering_docker/data-engineering-spark/itversity-material/03-hadoop-and-spark/05_dml_and_partitioning_using_spark_sql/01_dml_and_partitioning_using_spark_sql.ipynb
@@ -29,18 +29,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "username = itversity\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data",
+     "source": "user"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "itversity"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "val username = System.getProperty(\"user.name\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "username = itversity\n",
+       "spark = org.apache.spark.sql.SparkSession@1db6a9a3\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data",
+     "source": "user"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "org.apache.spark.sql.SparkSession@1db6a9a3"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import org.apache.spark.sql.SparkSession\n",
     "\n",
@@ -100,9 +143,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Waiting for a Spark session to start..."
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data",
+     "source": "user"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "++\n",
+       "||\n",
+       "++\n",
+       "++\n",
+       "\n"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%%sql\n",
     "\n",
@@ -111,9 +179,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "+----------------+-----------+-----------+\n",
+       "|        database|  tableName|isTemporary|\n",
+       "+----------------+-----------+-----------+\n",
+       "|itversity_retail|order_items|      false|\n",
+       "|itversity_retail|     orders|      false|\n",
+       "+----------------+-----------+-----------+\n",
+       "\n"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%%sql\n",
     "\n",
@@ -122,9 +207,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "++\n",
+       "||\n",
+       "++\n",
+       "++\n",
+       "\n"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%%sql\n",
     "\n",
@@ -133,9 +233,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "+------------------+\n",
+       "|current_database()|\n",
+       "+------------------+\n",
+       "|  itversity_retail|\n",
+       "+------------------+\n",
+       "\n"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%%sql\n",
     "\n",
@@ -144,9 +260,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "++\n",
+       "||\n",
+       "++\n",
+       "++\n",
+       "\n"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%%sql\n",
     "\n",
@@ -160,9 +291,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "++\n",
+       "||\n",
+       "++\n",
+       "++\n",
+       "\n"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%%sql\n",
     "\n",
@@ -172,9 +318,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "+--------+\n",
+       "|count(1)|\n",
+       "+--------+\n",
+       "|   68883|\n",
+       "+--------+\n",
+       "\n"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%%sql\n",
     "\n",
