--- a/spark_env_data_engineering_docker/data-engineering-spark/itversity-material/03-hadoop-and-spark/05_dml_and_partitioning_using_spark_sql/03_creating_tables_using_parquet_in_spark_sql.ipynb
+++ b/spark_env_data_engineering_docker/data-engineering-spark/itversity-material/03-hadoop-and-spark/05_dml_and_partitioning_using_spark_sql/03_creating_tables_using_parquet_in_spark_sql.ipynb
@@ -18,9 +18,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "username = itversity\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data",
+     "source": "user"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "itversity"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "val username = System.getProperty(\"user.name\")"
    ]
@@ -198,6 +219,13 @@
     "\n",
     "s\"hdfs dfs -ls /user/${username}/warehouse/${username}_retail.db/order_items\" !"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -207,7 +235,12 @@
    "name": "apache_toree_scala"
   },
   "language_info": {
-   "name": ""
+   "codemirror_mode": "text/x-scala",
+   "file_extension": ".scala",
+   "mimetype": "text/x-scala",
+   "name": "scala",
+   "pygments_lexer": "scala",
+   "version": "2.11.12"
   }
  },
  "nbformat": 4,
